--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>Simple Timer</title>
-    <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+    <title>Trivia Time</title>
+    <link rel="stylesheet" type="text/css" href="assets\css\title_style.css">
 
   </head>
 
   <body>
 
-    <div "container">
-
-    <div id="time-left"></div>
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
-
-    <!-- Script -->
-    <script src="assets\javascript\Timer.js"></script>
-
-    </div> <!-- Container -->
+    <center>
+    <A HREF="TriviaGame.html"><IMG SRC="assets\images\StartTrivia.png" alt="Title_Image"></A>
+    </center>
 
   </body>
 
 </html>
+
+
+
